--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -6,6 +6,10 @@
 <h1>{{ profile.user.username }}</h1>
 {{ profile.avatar|safe }}
 
+{% if user != profile.user %}
+    <a href="#">{{ _('add as friend') }}</a>
+{% endif %}
+
 {% if profile.description %}about: {{ profile.description }}{% endif %}
 {% if profile.country %}country: {{ profile.country }}{% endif %}
 <ul>
