--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -7,7 +7,7 @@
 {{ profile.avatar|safe }}
 
 {% if user != profile.user %}
-    <a href="#">{{ _('add as friend') }}</a>
+    <a href="{% url users_add profile.user %}">{{ _('add as friend') }}</a>
 {% endif %}
 
 {% if profile.description %}about: {{ profile.description }}{% endif %}
