trying to add stuff

--- a/dashline/templates/timeline/add_entry.html
+++ b/dashline/templates/timeline/add_entry.html
@@ -10,7 +10,7 @@
 
 	<script type="text/javascript">
 		$(function() {
-			$('#accordion ').formset({
+			$('#accordion div').formset({
 				prefix: 'timeline'
 			});
 		})
@@ -26,8 +26,6 @@
 			changeYear: true
 		});});
 		
-		$("#accordion").accordion();
-
     });
 	</script>
 
@@ -53,9 +51,8 @@
 						
 						<div id="accordion">
 							{% for form in formset.forms %}
-							<div>
-								<h3><a href="#">New Event</a></h3>
 								<div id="{{ form.prefix }}-row">
+								<h3><a href="#">New Event</a></h3>
 									{% for fld in form.hidden_fields %}{{ fld }}{% endfor %}
 									{% if form.instance.pk %}{{ form.DELETE }}{% endif %}
 									
@@ -64,7 +61,6 @@
 									<p>{{ form.description }}</p>
 									<p>{{ form.entry_type }}<br/>{{ form.entry_content }}</p>
 								</div>
-							</div>
 							{% endfor %}
 						</div>
 						
