--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -6,9 +6,14 @@
 <h1>{{ profile.user.username }}</h1>
 {{ profile.avatar|safe }}
 
-{% if user != profile.user and is_following %}
-    <a href="{% url users_follow profile.user %}">{{ _('follow') }}</a>
+{% if user != profile.user %}
+    {% if profile.user in user.followers_set.all %}
+        <p>already following</p>
+    {% else %}
+        <a href="{% url users_follow profile.user %}">{{ _('follow') }}</a>
+    {% endif %}
 {% endif %}
+
 
 {% if profile.description %}about: {{ profile.description }}{% endif %}
 {% if profile.country %}country: {{ profile.country }}{% endif %}
@@ -20,7 +25,7 @@
 
 <h3>Following</h3>
 <ul>
-{% for friend in profile.following %}
+{% for friend in profile.user.following_set.all %}
     <li><a href="{% url profiles_profile_detail friend.to_user.username %}">{{ friend.to_user }}</a><li>
 {% empty %}
     <li>No friends yet.</li>
