--- a/dashline/templates/timeline/add_entry.html
+++ b/dashline/templates/timeline/add_entry.html
@@ -4,8 +4,11 @@
 
 {% block extrajs %} 
 	<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.formset.min.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.elastic.js"></script>
+
 	
 	<link rel="stylesheet" type="text/css" href="http://jquery-ui.googlecode.com/svn/tags/latest/themes/base/jquery-ui.css" media="all" />
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 
 	<script type="text/javascript">
@@ -25,6 +28,8 @@
 			changeMonth: true,
 			changeYear: true
 		});});
+		
+		$('textarea').live('focus', function(){ $('#myTextarea').elastic(); });
 		
     });
 	</script>
