fixed name of block in timeline show

--- a/dashline/templates/timeline/show.html
+++ b/dashline/templates/timeline/show.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block Title %}{{ timeline.title }}{% endblock %}
+{% block title %}{{ timeline.title }}{% endblock %}
 
 {% block content %}
 
