--- a/dashline/templates/timeline/add_entry.html
+++ b/dashline/templates/timeline/add_entry.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block Title %}Add entries to your timeline{% endblock %}
+{% block title %}Add entries to your timeline{% endblock %}
 
 {% block extrajs %} 
 	<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.formset.min.js"></script>
