changed from T to t

--- a/dashline/templates/timeline/add_entry.html
+++ b/dashline/templates/timeline/add_entry.html
@@ -29,7 +29,7 @@
 			changeYear: true
 		});});
 		
-		$('textarea').live('focus', function(){ $('#myTextarea').elastic(); });
+		$('textarea').live('focus', function(){ $(this).elastic(); });
 		
     });
 	</script>
