--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -6,8 +6,8 @@
 <h1>{{ profile.avatar|safe }} {{ profile.user.username }}</h1>
 
 
-{% if user != profile.user %}
-    {% if profile.user in user.followers_set.all %}
+{% if request.user != profile.user %}
+    {% if profile.user in request.user.followers_set.all %}
         <p>already following</p>
     {% else %}
         <a href="{% url users_follow profile.user %}">{{ _('follow') }}</a>
