--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -7,8 +7,8 @@
 {{ profile.avatar|safe }}
 
 {% if user != profile.user %}
-    {% if profile.user in user.followers_set.all %}
-        <p>already following</p>
+    {% if profile.user in follow_list %}
+        <a href="{% url users_follow profile.user %}">{{ _('unfollow') }}</a>
     {% else %}
         <a href="{% url users_follow profile.user %}">{{ _('follow') }}</a>
     {% endif %}
