--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -7,7 +7,7 @@
 
 {% if user != profile.user %}
     {% if profile.user in follow_list %}
-        <a href="{% url users_follow profile.user %}">{{ _('unfollow') }}</a>
+        <a href="{% url users_unfollow profile.user %}">{{ _('unfollow') }}</a>
     {% else %}
         <a href="{% url users_follow profile.user %}">{{ _('follow') }}</a>
     {% endif %}
