adding jquery ui template

--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -45,17 +45,21 @@
 	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
 	<![endif]-->
 	
-	<!-- jQuery -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="{{ MEDIA_URL }}js/functions.js"></script>
-		<script src="{{ MEDIA_URL}}html5/js/modernizr-1.5.min.js"></script>
-	
+
+    <link type="text/css" href="{{ MEDIA_URL }}css/dashline/jquery-ui-1.8.4.custom.css" rel="stylesheet" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css" type="text/css" media="screen" />
     {% block extracss %}{% endblock %}
+	<!-- jQuery -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"></script>
+    {#<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"></script>}#}
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.4.custom.min.js"></script>
+	<script src="{{ MEDIA_URL }}js/functions.js"></script>
+	<script src="{{ MEDIA_URL}}html5/js/modernizr-1.5.min.js"></script>
+
     {% block extrajs %}{% endblock %}
+
     {% block extrahead %}{% endblock %}
+
 </head>
 
 <body id="DashLine">
