--- a/dashline/templates/timeline/show.html
+++ b/dashline/templates/timeline/show.html
@@ -2,27 +2,94 @@
 
 {% block title %}{{ timeline.title }}{% endblock %}
 
+{% block extrahead %}
+	<link href="http://www.google.com/tenthbirthday/styles/display.css" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+
 {% block content %}
 
 	<h2>{{ timeline.title }}</h2>
 	<h3>by <a href='{% url profiles_profile_detail timeline.owner %}'>{{ timeline.owner }}</a>, created {{ timeline.date_created|date:'d/m/Y' }}</h3>
 	<p>{{ timeline.description|linebreaksbr }}</p>
 	
-	<ul>
-		{% for entry in timeline.entry_set.all %}
-		
-			{% if timeline.default_ordering == 'Y' %}
-				{% ifchanged entry.when|date:"Y" %}
-					{% if forloop.first %}
-						
-					{% else %}
-						</li>
-					{% endif %}
-						<li>{{ entry.when|date:"Y" }}<br/>
-				{% endifchanged %}
-				{{ entry.title }}<br/>
+	<div id='tl-master-canvas' class='goog-app'>
+	
+		<div id='tl-interactive-canvas' style='left: 0pt;'>
+			<div id='tl-event-canvas' style='width: 1873px; height: 452px;'>
+				<ul class='tl-events'>	
+						{% if timeline.default_ordering == 'Y' %}
+							{% for entry in timeline.entry_set.all %}
+								{% ifchanged entry.when|date:"Y" %}
+								
+									{% if forloop.first %}
+										<li class='first'>
+											<h3>
+												<div></div>
+												<span class='year'>{{ entry.when|date:"Y" }}</span>
+											</h3>
+											
+											<ul class='column'>	
+								
+									{% else %}
+												</ul>
+											</li>
+											
+											<li class='first'>
+											<h3>
+												<div></div>
+												<span class='year'>{{ entry.when|date:"Y" }}</span>
+											</h3>
+											
+											<ul class='column'>	
+									{% endif %}
+							
+								{% endifchanged %}
+								
+								<li class='milestone'>
+									<a href='' hidefocus=''>
+										<span class='tl-icon' title='{{ entry.entry_type }}'></span>
+										<span class='tl-msg'>
+											<span class='tl-msg-inside'>{{ entry.title }}</span>
+										</span>
+									</a>
+								</li>
+								
+								
+								{% if forloop.last %}
+									</ul>
+								</li>
+								{% endif %}
+								
+							{% endfor %}
+				</ul>
+			</div>
+					
+			<div id='tl-nav'>
+			
+			<div id="tl-button-left" class="buttons-left"><div class="goog-inline-block goog-button goog-button-base" title="Rolar a linha do tempo para a esquerda" role="button" style="-moz-user-select: none;" aria-disabled="false" tabindex="0"><div class="goog-inline-block goog-button-base-outer-box"><div class="goog-inline-block goog-button-base-inner-box"><div class="goog-button-base-pos"><div class="goog-button-base-top-shadow">&nbsp;</div><div class="goog-button-base-content">?</div></div></div></div></div></div>
+			<div title="Mova para rolar a linha do tempo" id="tl-nav-current-bk" style="left: 1231px; width: 99px;"></div>
+			<div id="tl-button-right" class="buttons-right"><div class="goog-inline-block goog-button goog-button-base" title="Rolar a linha do tempo para a direita" role="button" style="-moz-user-select: none;" aria-disabled="false" tabindex="0"><div class="goog-inline-block goog-button-base-outer-box"><div class="goog-inline-block goog-button-base-inner-box"><div class="goog-button-base-pos"><div class="goog-button-base-top-shadow">&nbsp;</div><div class="goog-button-base-content">?</div></div></div></div></div></div>
+			
+				<div class='canvas'>
+					<ul id='tl-nav-list'>
+						{% for entry in timeline.entry_set.all %}
+							{% ifchanged entry.when|date:"Y" %}
+								<li><a href='#{{ entry.when|date:"y" }}'>{{ entry.when|date:"y" }}</a></li>
+							{% endifchanged %}
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 			{% endif %}
 			
+			
+		
+
+
+{#		
 			{% if timeline.default_ordering == 'M' %}
 				{% ifchanged entry.when|date:"m/Y" %}
 					{% if forloop.first %}
@@ -30,7 +97,7 @@
 					{% else %}
 						</li>
 					{% endif %}
-						<li>{{ entry.when|date:"m/Y" }}<br/>
+						<li class='first'><h3><div></div><span class='month'>{{ entry.when|date:"m/Y" }}</span></h3>
 				{% endifchanged %}
 				{{ entry.title }}<br/>
 			{% endif %}
@@ -41,14 +108,14 @@
 					{% else %}
 						</li>
 					{% endif %}
-						<li>{{ entry.when|date:"d/m/Y" }}<br/>
+						<li class='first'><h3><div></div><span class='day'>{{ entry.when|date:"d/m/Y" }}</span></h3>
 				{% endifchanged %}
 				{{ entry.title }}<br/>
 			{% endif %}
 			</li>
+#}		
 			
-			
-		{% endfor %}
+
 	</ul>
 	
 {% endblock %}
