--- a/dashline/templates/timeline/browse.html
+++ b/dashline/templates/timeline/browse.html
@@ -10,7 +10,8 @@
     <ul>
     {% autopaginate timelines 4 %}
 	{% for timeline in timelines %}
-		<li><a href='{% url timeline_show timeline.slug %}'>{{ timeline }}</a></li>
+		<li><a href='{% url timeline_show timeline.slug %}'>{{ timeline }}</a><br/>
+			<p>{{ timeline.description|linebreaksbr }}</p></li>
 	{% endfor %}
 	{% paginate %}
 	</ul>
