removing garbage from base.html

--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -92,13 +92,13 @@
 
 	<aside>
 	    {% block sidebar %}
-		<h2>Sidebar Content if we are gonna have a sidebar :)</h2>
+		<h2></h2>
 		{% endblock %}
 	</aside>
 	
 	<footer>
 		<div>
-			<p><small>&copy; Copyright Dashline Team 2010. All Rights Reserved. This website is Pony Powered.<br/>Maybe you want to <a href="{# url contact #}"><b>contact us</b></a> or just want to know <a href="{# url about #}"><b>about who we are</b></a>.</small></p>	
+			<p><small>&copy; Copyright Dashline Team 2010. All Rights Reserved. Django Powered.</small></p>	
 		</div>
 	</footer>
     
