--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>{{ profile.avatar|safe }} {{ profile.user.username }}</h1>
 
-{% if user != profile.user %}
+{% if request.user.is_active and user != profile.user %}
     {% if profile.user in follow_list %}
         <a href="{% url users_unfollow profile.user %}">{{ _('unfollow') }}</a>
     {% else %}
