adding some links.

--- a/dashline/templates/timeline/show.html
+++ b/dashline/templates/timeline/show.html
@@ -33,7 +33,7 @@
 				
 			<li class='entry'>
 				<p>
-					{{ entry.entry_type}} - {{ entry.title }}<br/>
+					{{ entry.entry_type}} - <a href='#'>{{ entry.title }}</a><br/>
 					{{ entry.description|linebreaksbr }}
 				</p>
 			</li>
