--- a/dashline/templates/profiles/create_profile.html
+++ b/dashline/templates/profiles/create_profile.html
@@ -5,7 +5,7 @@
 <h1>Create your profile</h1>
  
 <form method="POST" action="">{% csrf_token %}
-    {{ form.as_p }}
+    {% include 'base-form.html' %}
     <p><input type="submit" name="submit" value="Update" id="submit"></p>
 </form>
  
